# AWS-App-dev

./: README.md
01-dabit-amplify-next/: package.json
01-dabit-amplify-next/amplify/: team-provider-info.json
01-dabit-amplify-next/graphql/: schema.json
01-dabit-amplify-next/pages/: _app.js
02-dabit-amplify-next-auth/: configureAmplify.js  package-lock.json  package.json
02-dabit-amplify-next-auth/amplify/: team-provider-info.json
02-dabit-amplify-next-auth/components/: ConfirmSignUp.js  ForgotPassword.js  ForgotPasswordSubmit.js  Input.js  SignIn.js
02-dabit-amplify-next-auth/pages/: _app.js  auth.js
03-dabit-jamstack-ecommerce-next/: ecommerce.config.js  package.json  readme-my-build.md  tailwind.config.js
03-dabit-jamstack-ecommerce-next/components/: CartLink.js  Inventory.js  ListItem.js  ViewInventory.js
03-dabit-jamstack-ecommerce-next/layouts/: layout.js
03-dabit-jamstack-ecommerce-next/pages/: _app.js  admin.js  cart.js  checkout.js  index.js
03-dabit-jamstack-ecommerce-next/utils/: categoryProvider.js  helpers.js  inventory-my.js  inventory.js  inventoryProvider.js
05-aws-in-action-3ed/chapter07/: bucketpolicy.json
05-aws-in-action-3ed/chapter08-2ed/: bucketpolicy.json
07-Blueprint-4P-roduction-Ready-Web-App/: my-build-readme.md
07-Blueprint-4P-roduction-Ready-Web-App/backend/: pyproject.toml
07-Blueprint-4P-roduction-Ready-Web-App/frontend-my/: package-lock.json  package.json
dabit-amplify-next/: .graphqlconfig.yml  README.md  package-lock.json  package.json
dabit-amplify-next-auth/: README.md
(+33 files in other folders)
